--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="../tree.css">
+  <link rel="stylesheet" href="tree.css">
 </head>
 <body>
   <div>
@@ -12,7 +12,7 @@
     <input type="button" id="next" value="Select next">
   </div>
   <div id="tree"></div>
-  <script src="../tree.js"></script>
+  <script src="tree.js"></script>
   <script src="example.js"></script>
 </body>
 </html>
